delet unusefel things

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                     
                 </div>  
             </div>
-            </div><!--there are problem-->
+            </div>
               
                       <div class="contact">
                 <div class="person">
                     <div class="img">
-                       <img src="images(10).jpg">
+                       <img src="image(12).jpg">
                     </div>
                     <div class="info">
                         <div>
@@ -200,6 +200,11 @@
                 </div>
             </div>
                 <div class="verify">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
                     <h4>Verify your mobile</h4>
                     <p>Enter The Verification Code Sent To</p>
                     <p>+91 990 2XX XXXX</p>
